--- a/pkg/repository/BUILD.bazel
+++ b/pkg/repository/BUILD.bazel
@@ -3,9 +3,9 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "repository",
     srcs = ["entity.go"],
-    importpath = "github.com/example/project/pkg/repository",
+    importpath = "github.com/dgodyna/bazel-playground/pkg/repository",
     visibility = ["//visibility:public"],
-    deps = ["//pkg/entity:go_default_library"],
+    deps = ["//pkg/entity"],
 )
 
 go_test(
@@ -13,7 +13,7 @@ go_test(
     srcs = ["entity_test.go"],
     embed = [":repository"],
     deps = [
-        "//pkg/entity:go_default_library",
+        "//pkg/entity",
         "@tools_gotest//assert",
         "@tools_gotest//assert/cmp",
     ],
