--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,9 +1,6 @@
 load("@bazel_gazelle//:def.bzl", "gazelle")
-load("@rules_pkg//:pkg.bzl", "pkg_tar", "pkg_zip")
-load("@rules_pkg//:mappings.bzl", "pkg_attributes", "pkg_filegroup", "pkg_files", "pkg_mkdirs", "strip_prefix")
-
-load("@bazel_skylib//lib:paths.bzl", "paths")
-load("@bazel_skylib//lib:shell.bzl", "shell")
+load("@rules_pkg//:pkg.bzl", "pkg_zip")
+load("@rules_pkg//:mappings.bzl", "pkg_files")
 
 # gazelle:prefix github.com/dgodyna/bazel-playground
 gazelle(name = "gazelle")
@@ -22,15 +19,19 @@ pkg_files(
     name = "package_busy_box",
     srcs = [
         "assets/scripts/server.sh",
-        "//cmd/busybox:busybox",
+        "//cmd/busybox",
     ],
     # Where it should be in the final package
     prefix = "bin",
 )
+
+load("//:version.bzl", "VERSION")
+
 
 pkg_zip(
     name = "busy_box_archive",
     srcs = [
         ":package_busy_box",
     ],
+    package_file_name = "busy_box_"+VERSION + ".zip"
 )
