--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2,7 +2,7 @@ load("@bazel_gazelle//:def.bzl", "gazelle")
 load("@rules_pkg//:pkg.bzl", "pkg_zip")
 load("@rules_pkg//:mappings.bzl", "pkg_files")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
-REGISTRY = "localhost:5001"
+REGISTRY = "kubernetes.docker.internal:5001"
 
 
 # gazelle:prefix github.com/dgodyna/bazel-playground
@@ -53,5 +53,4 @@ container_push(
   registry = REGISTRY,
   repository = "bazel-playground",
   image = ":busy_box_image",
-  tag = VERSION ,
 )
