--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -2,12 +2,15 @@ workspace(name = "com_github_dgodyna_bazel_playground")
 
 load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 
+# Rules for docker packaging
 http_archive(
     name = "io_bazel_rules_docker",
     sha256 = "92779d3445e7bdc79b961030b996cb0c91820ade7ffa7edca69273f404b085d5",
     strip_prefix = "rules_docker-0.20.0",
     urls = ["https://github.com/bazelbuild/rules_docker/releases/download/v0.20.0/rules_docker-v0.20.0.tar.gz"],
 )
+
+# Go language rules
 http_archive(
     name = "io_bazel_rules_go",
     sha256 = "2b1641428dff9018f9e85c0384f03ec6c10660d935b750e3fa1492a281a53b0f",
@@ -17,6 +20,7 @@ http_archive(
     ],
 )
 
+# Gazelle rules to sync built files in go packages
 http_archive(
     name = "bazel_gazelle",
     sha256 = "de69a09dc70417580aabf20a28619bb3ef60d038470c7cf8442fafcf627c21cb",
@@ -39,6 +43,7 @@ go_register_toolchains(version = "1.17.2")
 
 gazelle_dependencies(go_repository_default_config = "@//:WORKSPACE.bazel")
 
+# Packaging rules - to build archives and file structures
 http_archive(
     name = "rules_pkg",
     urls = [
@@ -50,10 +55,6 @@ http_archive(
 load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")
 rules_pkg_dependencies()
 
-
-load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
-
-bazel_skylib_workspace()
 
 load(
     "@io_bazel_rules_docker//repositories:repositories.bzl",
@@ -70,10 +71,10 @@ load(
     "container_pull",
 )
 
+# Pull docker image which will be used as a baseline for busybox application
 container_pull(
   name = "busy_box_base",
   registry = "gcr.io",
   repository = "distroless/base-debian11",
-  # 'tag' is also supported, but digest is encouraged for reproducibility.
-#  digest = "sha256:0530d193888bcd7bd0376c8b34178ea03ddb0b2b18caf265135b6d3a393c8d05",
+  digest = "sha256:0530d193888bcd7bd0376c8b34178ea03ddb0b2b18caf265135b6d3a393c8d05",
 )
