--- a/cmd/greeter/BUILD.bazel
+++ b/cmd/greeter/BUILD.bazel
@@ -10,6 +10,8 @@ go_library(
     importpath = "github.com/dgodyna/bazel-playground/cmd/greeter",
     visibility = ["//visibility:private"],
     deps = [
+        "//pkg/api/petstore/impl",
+        "//pkg/pet",
         "@com_github_google_subcommands//:subcommands",
         "@com_github_rs_zerolog//:zerolog",
         "@com_github_rs_zerolog//log",
